# semver

./: Makefile  README.md  todo.md
cli/: Cargo.toml
core/: Cargo.toml
core/src/: comment_parser.rs  lib.rs  models.rs  versioner.rs
