[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "semver"
path = "src/semver/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.23", features = ["derive"] }
core = { path = "../core"}
